--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,9 +11,14 @@
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_dashboard"/>
 
-    <item
+    <!--<item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications"/>
+        android:title="@string/title_notifications" /> !-->
+
+    <item
+        android:id="@+id/navigation_health_articles"
+        android:icon="@drawable/ic_article_black_24dp"
+        android:title="@string/title_health_articles" />
 
 </menu>
