--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -17,9 +17,16 @@
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
-    <fragment
+    <!--<fragment
         android:id="@+id/navigation_notifications"
         android:name="com.example.healthhub.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_notifications" /> !-->
+
+    <fragment
+        android:id="@+id/navigation_health_articles"
+        android:name="com.example.healthhub.ui.health_articles.HealthArticlesFragment"
+        android:label="@string/title_health_articles"
+        tools:layout="@layout/fragment_health_articles" />
+
 </navigation>
