--- a/app/src/main/res/layout/fragment_health_articles.xml
+++ b/app/src/main/res/layout/fragment_health_articles.xml
@@ -11,10 +11,11 @@
         android:id="@+id/textViewHATitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:textColor="@color/black"
         android:fontFamily="@font/sf_regular"
-        android:textSize="20sp"
+        android:text="@string/app_name"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,22 +25,24 @@
         android:id="@+id/textView_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="25dp"
         android:text="@string/app_name"
         android:fontFamily="@font/sf_bold"
         android:textColor="@color/black"
-        android:textSize="34sp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
-        android:layout_width="344dp"
-        android:layout_height="523dp"
         android:id="@+id/listViewHA"
-        android:layout_marginStart="-40dp"
+        android:layout_width="310dp"
+        android:layout_height="472dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="-40dp"
+        android:layout_marginEnd="40dp"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10.0dp"
         app:layout_constraintEnd_toEndOf="@+id/textViewHATitle"
         app:layout_constraintStart_toStartOf="@+id/textViewHATitle"
         app:layout_constraintTop_toBottomOf="@+id/textViewHATitle" />
