--- a/app/src/main/res/layout/multi_lines.xml
+++ b/app/src/main/res/layout/multi_lines.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/black"
-    android:padding="20dp">
+    android:background="@drawable/corner_bg"
+    android:padding="15dp">
 
     <TextView
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/line_b"
         android:text="TextView"
-        android:fontFamily="@font/sf_regular"
+        android:fontFamily="@font/sf_light"
         android:textColor="#FFF000"
         android:textSize="14sp" />
 
@@ -37,29 +37,29 @@
             android:layout_height="wrap_content"
             android:id="@+id/line_c"
             android:text="TextView"
-            android:fontFamily="@font/sf_regular"
+            android:fontFamily="@font/sf_light"
             android:textSize="12sp"
             android:textColor="#ffff66" />
         
         <TextView
             android:layout_width="0dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.4"
             android:layout_height="wrap_content"
             android:id="@+id/line_d"
             android:text="TextView"
-            android:fontFamily="@font/sf_regular"
+            android:fontFamily="@font/sf_light"
             android:textSize="12sp"
             android:textColor="#ffff66" />
 
         <TextView
             android:layout_width="0dp"
-            android:layout_weight="0.3"
+            android:layout_weight="0.5"
             android:layout_height="wrap_content"
             android:id="@+id/line_e"
             android:text="TextView"
             android:fontFamily="@font/sf_regular"
             android:textSize="12sp"
-            android:textColor="#ffff66" />
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
