--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.HealthHub" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/md_blue_500</item>
+        <item name="colorPrimaryVariant">@color/md_blue_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -13,4 +13,20 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Theme.Visuals.NoActionBar" parent="Theme.MaterialComponents.Light">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/md_blue_500</item> <!-- blue -->
+        <item name="colorPrimaryVariant">@color/md_blue_700</item> <!-- darker shade of blue -->
+        <item name="colorOnPrimary">@color/md_white_1000</item> <!-- white -->
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/md_blue_500</item> <!-- light orange -->
+        <item name="colorSecondaryVariant">@color/colorAccent</item> <!-- darker shade of orange -->
+        <item name="colorOnSecondary">@color/md_black_1000</item> <!-- black -->
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <!-- Customize your theme here. -->
+        <item name="windowNoTitle">true</item>
+    </style>
+
 </resources>
