--- a/app/src/main/res/layout/activity_buy_medicine_details.xml
+++ b/app/src/main/res/layout/activity_buy_medicine_details.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="104dp"
         android:text="Buy Medicine"
+        android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +40,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewBMDTotalCost"
-        app:layout_constraintVertical_bias="0.517" />
+        app:layout_constraintVertical_bias="0.23" />
 
     <Button
         android:id="@+id/buttonBMDGoToCart"
@@ -49,10 +50,10 @@
         android:text="Go to Cart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonBMDBack"
-        app:layout_constraintHorizontal_bias="0.18"
+        app:layout_constraintHorizontal_bias="0.639"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewBMDTotalCost"
-        app:layout_constraintVertical_bias="0.517" />
+        app:layout_constraintVertical_bias="0.15" />
 
     <EditText
         android:id="@+id/editTextTextBMDMultiLine"
@@ -62,6 +63,7 @@
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +73,7 @@
         android:id="@+id/textViewBMDTotalCost"
         android:layout_width="132dp"
         android:layout_height="36dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="32dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
