--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/md_blue_grey_500"
+    android:background="@drawable/back8"
     tools:context=".RegisterActivity">
 
     <EditText
@@ -13,7 +13,7 @@
         android:layout_height="46dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/input_bg"
-        android:backgroundTint="#36FDFCFC"
+        android:backgroundTint="#772196F3"
         android:drawableLeft="@drawable/ic_baseline_security_24"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -35,7 +35,7 @@
         android:layout_height="46dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/input_bg"
-        android:backgroundTint="#36FDFCFC"
+        android:backgroundTint="#7C2196F3"
         android:drawableLeft="@drawable/ic_baseline_email_24"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -57,7 +57,7 @@
         android:layout_height="46dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/input_bg"
-        android:backgroundTint="#36FDFCFC"
+        android:backgroundTint="#812196F3"
         android:drawableLeft="@drawable/ic_baseline_security_24"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -93,7 +93,7 @@
         android:layout_height="46dp"
         android:layout_marginTop="64dp"
         android:background="@drawable/input_bg"
-        android:backgroundTint="#36FDFCFC"
+        android:backgroundTint="#852196F3"
         android:drawableLeft="@drawable/ic_baseline_person_24"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -139,7 +139,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Already have an account?"
-        android:textColor="@color/white"
+        android:textColor="@color/md_black_1000"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
