--- a/app/src/main/res/layout/activity_buy_medicine.xml
+++ b/app/src/main/res/layout/activity_buy_medicine.xml
@@ -4,69 +4,62 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back11"
     tools:context=".BuyMedicineActivity">
 
     <TextView
-        android:id="@+id/textViewHATitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/black"
-        android:fontFamily="@font/sf_regular"
-        android:text="@string/app_name"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        android:text="Healthub"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toTopOf="@+id/textViewBMTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_logo" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView_logo"
+        android:id="@+id/textViewBMTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:text="@string/app_name"
-        android:fontFamily="@font/sf_bold"
-        android:textColor="@color/black"
-        android:textSize="30sp"
+        android:layout_marginTop="84dp"
+        android:text="Buy Medicine"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/listViewBMCart"
-        android:layout_width="310dp"
-        android:layout_height="472dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="40dp"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="10.0dp"
-        app:layout_constraintEnd_toEndOf="@+id/textViewHATitle"
-        app:layout_constraintStart_toStartOf="@+id/textViewHATitle"
-        app:layout_constraintTop_toBottomOf="@+id/textViewHATitle" />
+        android:layout_width="375dp"
+        android:layout_height="454dp"
+        android:layout_marginTop="52dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewBMTitle" />
 
     <Button
         android:id="@+id/buttonBMBack"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="48dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="16dp"
         android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listViewBMCart"
-        app:layout_constraintVertical_bias="0.505" />
+        app:layout_constraintTop_toBottomOf="@+id/_dynamic"
+        app:layout_constraintVertical_bias="0.607" />
 
     <Button
         android:id="@+id/buttonBMGoToCart"
-        android:layout_width="165dp"
-        android:layout_height="wrap_content"
-        android:text="Go To Cart"
+        android:layout_width="194dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="16dp"
+        android:text="Go to Cart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonBMBack"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.43"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listViewBMCart"
-        app:layout_constraintVertical_bias="0.505" />
-
+        app:layout_constraintTop_toBottomOf="@+id/_dynamic"
+        app:layout_constraintVertical_bias="0.607" />
 </androidx.constraintlayout.widget.ConstraintLayout>
