--- a/app/src/main/res/layout/activity_cart_buy_medicine.xml
+++ b/app/src/main/res/layout/activity_cart_buy_medicine.xml
@@ -4,34 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back9"
     tools:context=".CartBuyMedicineActivity">
 
     <TextView
         android:id="@+id/textViewBMCartTotalCost"
-        android:layout_width="142dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="145dp"
+        android:layout_height="33dp"
+        android:layout_marginTop="16dp"
         android:text="Total Cost: 2000/-"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listViewBMCart" />
 
     <Button
         android:id="@+id/buttonBMCartCheckout"
-        android:layout_width="194dp"
+        android:layout_width="118dp"
         android:layout_height="48dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginBottom="8dp"
         android:text="Checkout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonBMCartDate" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonBMCartDate"
+        app:layout_constraintVertical_bias="0.685" />
 
     <TextView
         android:id="@+id/textViewDDName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="24*7 Health Care"
+        android:text="Healthub"
         android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewBMTitle"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,8 +55,8 @@
 
     <ListView
         android:id="@+id/listViewBMCart"
-        android:layout_width="364dp"
-        android:layout_height="350dp"
+        android:layout_width="347dp"
+        android:layout_height="295dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.489"
@@ -64,7 +67,7 @@
 
     <Button
         android:id="@+id/buttonBMCartBack"
-        android:layout_width="wrap_content"
+        android:layout_width="104dp"
         android:layout_height="48dp"
         android:layout_marginEnd="68dp"
         android:layout_marginBottom="8dp"
@@ -74,15 +77,16 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/buttonBMCartCheckout"
         app:layout_constraintTop_toBottomOf="@+id/buttonBMCartDate"
-        app:layout_constraintVertical_bias="0.733" />
+        app:layout_constraintVertical_bias="0.685" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="140dp"
         android:layout_height="23dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:text="Select Delivery Date"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewBMCartTotalCost" />
 
@@ -90,7 +94,7 @@
         android:id="@+id/buttonBMCartDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:text="21/10/2023"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
