--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg4"
+    android:background="@drawable/back7"
     tools:context=".LoginActivity">
 
     <EditText
@@ -13,7 +13,7 @@
         android:layout_height="46dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/input_bg"
-        android:backgroundTint="#36FDFCFC"
+        android:backgroundTint="#722196F3"
         android:drawableLeft="@drawable/ic_baseline_security_24"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -49,7 +49,7 @@
         android:layout_height="46dp"
         android:layout_marginTop="96dp"
         android:background="@drawable/input_bg"
-        android:backgroundTint="#36FDFCFC"
+        android:backgroundTint="#742196F3"
         android:drawableLeft="@drawable/ic_baseline_person_24"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -93,12 +93,12 @@
         android:id="@+id/textViewRegNew"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="32dp"
         android:text="Register for new user"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonLog" />
 </androidx.constraintlayout.widget.ConstraintLayout>
