--- a/app/src/main/res/layout/activity_buy_medicine_book.xml
+++ b/app/src/main/res/layout/activity_buy_medicine_book.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back9"
     tools:context=".BuyMedicineBookActivity">
 
     <Button
         android:id="@+id/buttonBMBBooking"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
+        android:layout_width="118dp"
+        android:layout_height="52dp"
+        android:text="Book"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -21,11 +22,11 @@
     <EditText
         android:id="@+id/editTextBMBPincode"
         android:layout_width="310dp"
-        android:layout_height="40dp"
+        android:layout_height="45dp"
         android:layout_marginTop="40dp"
         android:ems="10"
+        android:hint="Pin Code"
         android:inputType="textPersonName"
-        android:text="Pin Code"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,11 +35,11 @@
     <EditText
         android:id="@+id/editTextBMBFullname"
         android:layout_width="310dp"
-        android:layout_height="40dp"
+        android:layout_height="45dp"
         android:layout_marginTop="60dp"
         android:ems="10"
+        android:hint="Full Name"
         android:inputType="textPersonName"
-        android:text="Full Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,11 +48,11 @@
     <EditText
         android:id="@+id/editTextBMBAddress"
         android:layout_width="310dp"
-        android:layout_height="40dp"
+        android:layout_height="45dp"
         android:layout_marginTop="40dp"
         android:ems="10"
+        android:hint="Address"
         android:inputType="textPersonName"
-        android:text="Address"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,13 +61,13 @@
     <EditText
         android:id="@+id/editTextBMBContactNumber"
         android:layout_width="310dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="44dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="52dp"
         android:ems="10"
+        android:hint="Contact Number"
         android:inputType="textPersonName"
-        android:text="Contact Number"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextBMBPincode" />
 
@@ -86,7 +87,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="24*7 Health Care"
+        android:text="Health Hub"
         android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewBMTitle"
         app:layout_constraintEnd_toEndOf="parent"
