--- a/app/src/main/res/layout/fragment_health_articles.xml
+++ b/app/src/main/res/layout/fragment_health_articles.xml
@@ -48,6 +48,16 @@
         app:layout_constraintStart_toStartOf="@+id/textViewHATitle"
         app:layout_constraintTop_toBottomOf="@+id/textViewHATitle" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listViewHA" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
