--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,21 +10,20 @@
     <EditText
         android:id="@+id/editTextRegPassword"
         android:layout_width="343dp"
-        android:layout_height="46dp"
+        android:layout_height="48dp"
         android:layout_marginTop="16dp"
+        android:autofillHints="password"
         android:background="@drawable/input_bg"
-        android:backgroundTint="#772196F3"
-        android:drawableLeft="@drawable/ic_baseline_security_24"
+        android:backgroundTint="@color/white"
+        android:drawableStart="@drawable/ic_baseline_security_24"
         android:drawablePadding="10dp"
-        android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
-        android:paddingLeft="20dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
+        android:fontFamily="@font/sf_regular"
+        android:paddingStart="20dp"
+        android:paddingEnd="10dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColorHint="#0D47A1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextRegEmail" />
@@ -32,21 +31,20 @@
     <EditText
         android:id="@+id/editTextRegEmail"
         android:layout_width="343dp"
-        android:layout_height="46dp"
+        android:layout_height="48dp"
         android:layout_marginTop="16dp"
+        android:autofillHints="emailAddress"
         android:background="@drawable/input_bg"
-        android:backgroundTint="#7C2196F3"
-        android:drawableLeft="@drawable/ic_baseline_email_24"
+        android:backgroundTint="@color/white"
+        android:drawableStart="@drawable/ic_baseline_email_24"
         android:drawablePadding="10dp"
-        android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
+        android:fontFamily="@font/sf_regular"
         android:inputType="textEmailAddress"
-        android:paddingLeft="20dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="10dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColorHint="#0D47A1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextRegUsername" />
@@ -54,21 +52,20 @@
     <EditText
         android:id="@+id/editTextRegconPassword"
         android:layout_width="343dp"
-        android:layout_height="46dp"
+        android:layout_height="48dp"
         android:layout_marginTop="16dp"
+        android:autofillHints=""
         android:background="@drawable/input_bg"
-        android:backgroundTint="#812196F3"
-        android:drawableLeft="@drawable/ic_baseline_security_24"
+        android:backgroundTint="@color/white"
+        android:drawableStart="@drawable/ic_baseline_security_24"
         android:drawablePadding="10dp"
-        android:ems="10"
-        android:hint="Confirm Password"
+        android:hint="@string/confirm_password"
+        android:fontFamily="@font/sf_regular"
         android:inputType="textPassword"
-        android:paddingLeft="20dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="10dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColorHint="#0D47A1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextRegPassword" />
@@ -77,69 +74,58 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Healthub"
+        android:layout_marginTop="50dp"
+        android:text="@string/app_name"
         android:textColor="@color/black"
+        android:fontFamily="@font/sf_bold"
         android:textSize="48sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/editTextRegUsername"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.092" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextRegUsername"
         android:layout_width="343dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="64dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="45dp"
         android:background="@drawable/input_bg"
-        android:backgroundTint="#852196F3"
-        android:drawableLeft="@drawable/ic_baseline_person_24"
+        android:backgroundTint="@color/white"
+        android:drawableStart="@drawable/ic_baseline_person_24"
         android:drawablePadding="10dp"
-        android:ems="10"
-        android:hint="Username"
+        android:hint="@string/username"
+        android:fontFamily="@font/sf_regular"
         android:inputType="textPersonName"
-        android:paddingLeft="20dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="10dp"
         android:textColor="@color/black"
-        android:textColorHint="@color/white"
+        android:textColorHint="#0D47A1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        android:autofillHints="username" />
 
     <Button
         android:id="@+id/buttonReg"
         android:layout_width="277dp"
-        android:layout_height="47dp"
-        android:layout_marginTop="44dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/btn_bg"
-        android:text="Register"
+        android:text="@string/register"
+        android:fontFamily="@font/sf_bold"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextRegconPassword" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:text="Register"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <TextView
         android:id="@+id/textViewExistUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Already have an account?"
-        android:textColor="@color/md_black_1000"
+        android:layout_marginTop="20dp"
+        android:text="@string/account"
+        android:fontFamily="@font/sf_regular"
+        android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
