--- a/app/src/main/res/layout/activity_buy_medicine.xml
+++ b/app/src/main/res/layout/activity_buy_medicine.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Healthub"
+        android:text="@string/app_name"
         android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewBMTitle"
         app:layout_constraintEnd_toEndOf="parent"
