--- a/app/src/main/res/layout/activity_health_articles_details.xml
+++ b/app/src/main/res/layout/activity_health_articles_details.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textViewHADTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Lorem Ipsum"
+        android:text="@string/app_name"
         android:fontFamily="@font/sf_bold"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="29dp"
-        android:text="Health is Wealth"
+        android:text="@string/tagline"
         android:fontFamily="@font/sf_regular"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -39,21 +39,24 @@
         android:id="@+id/buttonHADBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/sf_regular"
-        android:text="BACK"
+        android:fontFamily="@font/sf_bold"
+        android:text="@string/back"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/btn_bg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewHAD" />
 
     <ImageView
-        android:layout_width="358dp"
-        android:layout_height="520dp"
         android:id="@+id/imageViewHAD"
-        android:layout_marginTop="8dp"
+        android:layout_width="340dp"
+        android:layout_height="430dp"
+        android:layout_marginTop="10dp"
+        android:contentDescription="@string/title_health_articles"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewHADTitle"
-        tools:srcCompat="@drawable/health2" />
+        tools:srcCompat="@drawable/health1" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
