--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,95 +10,92 @@
     <EditText
         android:id="@+id/editTextPassword"
         android:layout_width="343dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="24dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/input_bg"
-        android:backgroundTint="#722196F3"
-        android:drawableLeft="@drawable/ic_baseline_security_24"
+        android:backgroundTint="@color/md_blue_100"
+        android:drawableStart="@drawable/ic_baseline_security_24"
         android:drawablePadding="10dp"
-        android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password"
+        android:fontFamily="@font/sf_regular"
         android:inputType="textPassword"
-        android:paddingLeft="20dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="10dp"
         android:textColor="@color/black"
-        android:textColorHint="@color/black"
+        android:textColorHint="#0D47A1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
+        android:autofillHints="password" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Healthub"
+        android:fontFamily="@font/sf_bold"
+        android:text="@string/app_name"
         android:textColor="@color/black"
         android:textSize="48sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.092" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView_gif" />
 
     <EditText
         android:id="@+id/editTextUsername"
         android:layout_width="343dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="96dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/input_bg"
-        android:backgroundTint="#742196F3"
-        android:drawableLeft="@drawable/ic_baseline_person_24"
+        android:backgroundTint="@color/md_blue_100"
+        android:drawableStart="@drawable/ic_baseline_person_24"
         android:drawablePadding="10dp"
-        android:ems="10"
-        android:hint="Username"
+        android:hint="@string/username"
+        android:fontFamily="@font/sf_regular"
         android:inputType="textPersonName"
-        android:paddingLeft="20dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="10dp"
         android:textColor="@color/black"
-        android:textColorHint="@color/black"
+        android:textColorHint="#0D47A1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        android:autofillHints="username" />
 
     <Button
         android:id="@+id/buttonLog"
         android:layout_width="277dp"
-        android:layout_height="47dp"
-        android:layout_marginTop="52dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/btn_bg"
-        android:text="Login"
+        android:text="@string/login"
+        android:textSize="16sp"
+        android:fontFamily="@font/sf_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:text="Login"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <TextView
         android:id="@+id/textViewRegNew"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Register for new user"
+        android:layout_marginTop="10dp"
+        android:text="@string/reg"
+        android:fontFamily="@font/sf_light"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonLog" />
+
+    <ImageView
+        android:id="@+id/imageView_gif"
+        android:layout_width="201dp"
+        android:layout_height="165dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/gif_logo"
+        android:contentDescription="@string/gif" />
 </androidx.constraintlayout.widget.ConstraintLayout>
