--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home"/>
+        android:id="@+id/navigation_medicines"
+        android:icon="@drawable/ic_medication_black_24dp"
+        android:title="@string/title_medicines"/>
 
     <item
         android:id="@+id/navigation_dashboard"
@@ -18,7 +18,7 @@
 
     <item
         android:id="@+id/navigation_health_articles"
-        android:icon="@drawable/ic_article_black_24dp"
+        android:icon="@drawable/ic_health_and_safety_24"
         android:title="@string/title_health_articles" />
 
 </menu>
