--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -22,7 +22,7 @@
         android:fontFamily="@font/sf_regular"
         android:paddingStart="20dp"
         android:paddingEnd="10dp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textColorHint="#0D47A1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +43,7 @@
         android:inputType="textEmailAddress"
         android:paddingStart="20dp"
         android:paddingEnd="10dp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textColorHint="#0D47A1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +64,7 @@
         android:inputType="textPassword"
         android:paddingStart="20dp"
         android:paddingEnd="10dp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textColorHint="#0D47A1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,21 +74,20 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:fontFamily="@font/sf_bold"
         android:text="@string/app_name"
         android:textColor="@color/black"
-        android:fontFamily="@font/sf_bold"
         android:textSize="48sp"
         app:layout_constraintBottom_toTopOf="@+id/editTextRegUsername"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView_gif" />
 
     <EditText
         android:id="@+id/editTextRegUsername"
         android:layout_width="343dp"
         android:layout_height="48dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/input_bg"
         android:backgroundTint="@color/white"
         android:drawableStart="@drawable/ic_baseline_person_24"
@@ -109,7 +108,7 @@
         android:id="@+id/buttonReg"
         android:layout_width="277dp"
         android:layout_height="50dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/btn_bg"
         android:text="@string/register"
         android:fontFamily="@font/sf_bold"
@@ -122,7 +121,7 @@
         android:id="@+id/textViewExistUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="@string/account"
         android:fontFamily="@font/sf_regular"
         android:textColor="@color/black"
@@ -131,5 +130,16 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonReg" />
+
+    <ImageView
+        android:id="@+id/imageView_gif"
+        android:layout_width="201dp"
+        android:layout_height="165dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/gif_logo2"
+        android:contentDescription="@string/gif" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
