--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,19 +3,19 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- action button for search -->
-    <item android:title="search"
-        android:id = "@+id/search"
+    <item android:title="@string/add_cart"
+        android:id = "@+id/cart"
         android:orderInCategory="101"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/search_icon"/>
+        android:icon="@drawable/cart_icon"/>
 
-    <item android:title="Refresh"
+    <item android:title="@string/refresh"
         android:id="@+id/refresh"
         android:orderInCategory="102"
         app:showAsAction="never"
         android:icon="@drawable/refresh_icon"/>
 
-    <item android:title="Sign out"
+    <item android:title="@string/sign_out"
         android:id="@+id/sign_out"
         android:orderInCategory="103"
         app:showAsAction="never"
